CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( SSC )

FIND_PATH( ILMBASE_DIR REQUIRED )
SET( ILMBASE_INCLUDE_DIR "${ILMBASE_DIR}/include" )
SET( ILMBASE_LIBRARY_DIR "${ILMBASE_DIR}/lib" )

INCLUDE_DIRECTORIES( ${ILMBASE_INCLUDE_DIR} )
LINK_DIRECTORIES( ${ILMBASE_LIBRARY_DIR} )
ADD_EXECUTABLE( SSC SSC.cpp )
